Improve chat jackpot coverage
